--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 	<img src="my_funny_face.jpg" alt="My Funny Face" width="200px" >
-	<h4>姓名</h4>
-	<h5>ZhaoYiyou</h5>
+	<h4>ZhaoYiyou</h4>
+	<h5>JianHua Experimental School</h5>
 
 	<h1>Profile</h1>
 	<ul>
